update: реализована большая часть роли админа

--- a/WebApi/Views/Shared/_AdminLayout.cshtml
+++ b/WebApi/Views/Shared/_AdminLayout.cshtml
@@ -86,9 +86,9 @@
         <h2>Админ панель</h2>
         <a href="/Admin/Index">Главная</a>
         <a href="/Admin/Users">Пользователи</a>
-        <a href="/Admin/Exercises">Пользователи</a>
-        <a href="/Admin/Variants">Пользователи</a>
-        <a href="/Admin/Moderation">Пользователи</a>
+        <a href="/Admin/Exercises">Задания</a>
+        <a href="/Admin/Variants">Варианты</a>
+        <a href="/Admin/ExercisesToModerate">Модерация</a>
     </div>
     <div class="main">
         <header>
