update: реализованы модули создания и редактирования варианта

--- a/WebApi/Views/Teacher/GetExercise.cshtml
+++ b/WebApi/Views/Teacher/GetExercise.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApi.Infrastructure.Models.Requests.EditExercise
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Задание";
     Layout = "_TeacherLayout";
 }
 
