--- a/WebApi/Views/Teacher/ProfileInfo.cshtml
+++ b/WebApi/Views/Teacher/ProfileInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApi.Infrastructure.Models.DTO.ProfileInfo
 
 @{
-    ViewBag.Title = "Профиль преподавателя";
+    ViewBag.Title = "Профиль";
     Layout = "_TeacherLayout";
 }
 
