--- a/WebApi/Views/Teacher/MyExercises.cshtml
+++ b/WebApi/Views/Teacher/MyExercises.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Collections.Generic.List<WebApi.Infrastructure.Models.DTO.ExerciseDto>
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Мои задания";
     Layout = "_TeacherLayout";
 }
 
