update: реализованы модуль управления группами учащихся

--- a/WebApi/Views/Shared/_TeacherLayout.cshtml
+++ b/WebApi/Views/Shared/_TeacherLayout.cshtml
@@ -90,7 +90,7 @@
         <h2>Преподаватель</h2>
         <a href="@Url.Action("Index", "Teacher")">Главная</a>
         <a href="@Url.Action("ProfileInfo", "Teacher")">Профиль</a>
-        <a href="/Teacher/Groups">Группы</a>
+        <a href="@Url.Action("MyGroups", "Teacher")">Группы</a>
         <a href="@Url.Action("MyExercises", "Teacher")">Задания</a>
         <a href="@Url.Action("MyVariants", "Teacher")">Варианты</a>
     </aside>
