--- a/WebApi/Views/Teacher/GetGroup.cshtml
+++ b/WebApi/Views/Teacher/GetGroup.cshtml
@@ -31,7 +31,7 @@
 
     <div class="d-flex gap-2">
         <a class="btn btn-secondary"
-           href="@Url.Action("MyGroups", "Teacher")">
+           href="javascript:history.back()">
             Назад
         </a>
 
