--- a/WebApi/Views/Shared/_TeacherLayout.cshtml
+++ b/WebApi/Views/Shared/_TeacherLayout.cshtml
@@ -90,9 +90,12 @@
         <h2>Преподаватель</h2>
         <a href="@Url.Action("Index", "Teacher")">Главная</a>
         <a href="@Url.Action("ProfileInfo", "Teacher")">Профиль</a>
+        <a href="@Url.Action("Students", "Teacher")">Студенты</a>
         <a href="@Url.Action("MyGroups", "Teacher")">Группы</a>
-        <a href="@Url.Action("MyExercises", "Teacher")">Задания</a>
-        <a href="@Url.Action("MyVariants", "Teacher")">Варианты</a>
+        <a href="@Url.Action("MyExercises", "Teacher")">Мои Задания</a>
+        <a href="@Url.Action("MyVariants", "Teacher")">Мои Варианты</a>
+        <a href="@Url.Action("AllVariants", "Teacher")">Все варианты</a>
+        <a href="@Url.Action("AllExercises", "Teacher")">Все задания</a>
     </aside>
 
     <div class="main">
