update: реализована большая часть роли студента

--- a/WebApi/Views/Admin/Users.cshtml
+++ b/WebApi/Views/Admin/Users.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<WebApi.Infrastructure.Models.DTO.UserForAdminDto>
+﻿@model List<WebApi.Infrastructure.Models.DTO.UserDto>
 
 @{
     ViewBag.Title = "Пользователи";
