--- a/WebApi/Views/Teacher/AddGroup.cshtml
+++ b/WebApi/Views/Teacher/AddGroup.cshtml
@@ -16,7 +16,7 @@
 
     <label>Студенты</label>
     <div class="students-list">
-        @foreach (var student in ViewBag.Students as List<UserForAdminDto> ?? new List<UserForAdminDto>())
+        @foreach (var student in ViewBag.Students as List<UserDto> ?? new List<UserDto>())
         {
             <div class="student-item" onclick="toggleCheckbox(this)">
                 <input type="checkbox" name="StudentIds[]" value="@student.Id" onclick="stopPropagation()" />
