--- a/WebApi/Views/Teacher/GetStudent.cshtml
+++ b/WebApi/Views/Teacher/GetStudent.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApi.Infrastructure.Models.DTO.UserForAdminDto
+﻿@model WebApi.Infrastructure.Models.DTO.UserDto
 
 @{
     ViewBag.Title = "Информация о студенте";
