--- a/WebApi/Views/Teacher/Students.cshtml
+++ b/WebApi/Views/Teacher/Students.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.List<WebApi.Infrastructure.Models.DTO.UserForAdminDto>
+﻿@model System.Collections.Generic.List<WebApi.Infrastructure.Models.DTO.UserDto>
 
 @{
     ViewBag.Title = "Студенты";
