update: дореализовано удаление всего и вся у админа и учителя

--- a/WebApi/Views/Teacher/AddExercise.cshtml
+++ b/WebApi/Views/Teacher/AddExercise.cshtml
@@ -40,7 +40,7 @@
     </div>
 
     <div class="mb-3 form-check">
-        <input type="checkbox" id="AttachmentRequired" name="AttachmentRequired" class="form-check-input" @(attachmentRequired ? "checked" : "") />
+        <input type="checkbox" id="AttachmentRequired" name="AttachmentRequired" class="form-check-input" value="true" @(attachmentRequired ? "checked" : "") />
         <label for="AttachmentRequired" class="form-check-label">Требуется вложение</label>
     </div>
 
