--- a/WebApi/Views/Student/CheckedVariant.cshtml
+++ b/WebApi/Views/Student/CheckedVariant.cshtml
@@ -32,8 +32,7 @@
                     {
                         <div class="mb-2">
                             <a class="btn btn-outline-primary btn-sm"
-                               href="@Url.Content($"~/uploads/{ex.ExerciseFilePath}")"
-                               target="_blank">
+                               href="@Url.Action("DownloadFileFromRepo", new { filePath = @ex.ExerciseFilePath })">
                                 📎 Скачать файл задания
                             </a>
                         </div>
@@ -48,8 +47,7 @@
                     {
                         <div class="mb-2">
                             <a class="btn btn-outline-success btn-sm"
-                               href="@Url.Content($"~/uploads/{ex.SolutionFilePath}")"
-                               target="_blank">
+                               href="@Url.Action("DownloadFileFromRepo", new { filePath = @ex.SolutionFilePath })">
                                 ✅ Посмотреть решение преподавателя
                             </a>
                         </div>
