update: добавил всякого

--- a/WebApi/Views/Teacher/EditExercise.cshtml
+++ b/WebApi/Views/Teacher/EditExercise.cshtml
@@ -58,6 +58,7 @@
 
 <form method="post" enctype="multipart/form-data" class="custom-form">
     <input type="hidden" name="Id" value="@Model.Id" />
+    <input type="hidden" name="TeacherId" value="@Model.TeacherId" />
 
     <label for="Year">Год</label>
     <input id="Year" name="Year" type="number" required value="@Model.Year" />
