update: реализовал возможность просмотра решений студентов

--- a/WebApi/Views/Shared/_TeacherLayout.cshtml
+++ b/WebApi/Views/Shared/_TeacherLayout.cshtml
@@ -96,6 +96,7 @@
         <a href="@Url.Action("MyVariants", "Teacher")">Мои Варианты</a>
         <a href="@Url.Action("AllVariants", "Teacher")">Все варианты</a>
         <a href="@Url.Action("AllExercises", "Teacher")">Все задания</a>
+        <a href="@Url.Action("GetStudentsSolutions", "Teacher")">Решения студентов</a>
     </aside>
 
     <div class="main">
