update: доделано редактирование вариантов и отправка сообщений по почте

--- a/WebApi/Views/Admin/GetExercise.cshtml
+++ b/WebApi/Views/Admin/GetExercise.cshtml
@@ -43,7 +43,7 @@
                 @(Model.AttachmentRequired ? "Да" : "Нет")
             </p>
 
-            <a href="javascript:history.back()" class="btn btn-secondary mt-3">Назад</a>
+            <a href="javascript:history.back()" class="btn btn-secondary">Назад</a>
             <a class="btn btn-primary"
                href="@Url.Action("EditExercise", "Admin", new { id = Model.Id })">
                 Редактировать задание
