--- a/WebApi/Views/Teacher/EditVariant.cshtml
+++ b/WebApi/Views/Teacher/EditVariant.cshtml
@@ -176,6 +176,8 @@
 <form method="post" class="custom-form">
     <input type="hidden" name="Id" value="@Model.Id"/>
     <input type="hidden" name="TeacherId" value="@Model.TeacherId"/>
+    <input type="hidden" name="TeacherFirstName" value="@Model.TeacherFirstName"/>
+    <input type="hidden" name="TeacherLastName" value="@Model.TeacherLastName"/>
 
     
     <label for="Title">Название варианта</label>
