--- a/WebApi/Views/Teacher/EditExercise.cshtml
+++ b/WebApi/Views/Teacher/EditExercise.cshtml
@@ -71,6 +71,9 @@
 
     <label for="Answer">Ответ</label>
     <input id="Answer" name="Answer" type="text" required value="@Model.Answer" />
+    
+    <label for="PrimaryScore" class="form-label">Количество первичных баллов за задание</label>
+    <input type="number" id="PrimaryScore" name="PrimaryScore" class="form-control" value="@Model.PrimaryScore" required/>
 
     <label for="ExerciseFile">Файл задания</label>
     <input id="ExerciseFile" name="ExerciseFile" type="file" />
