--- a/WebApi/Views/Teacher/Students.cshtml
+++ b/WebApi/Views/Teacher/Students.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Collections.Generic.List<WebApi.Infrastructure.Models.DTO.UserDto>
 
 @{
-    ViewBag.Title = "Студенты";
+    ViewBag.Title = "Учащиеся";
     Layout = "_TeacherLayout";
 }
 
@@ -13,7 +13,7 @@
         <th>Имя</th>
         <th>Фамилия</th>
         <th>Статус</th>
-        <th></th> <!-- столбец для кнопки -->
+        <th></th>
     </tr>
     </thead>
     <tbody>
